src/test/ui/generic-associated-types/collections-project-default.stderr
error[E0308]: mismatched types
  --> $DIR/collections-project-default.rs:58:5
   |
LL | fn floatify_sibling<C>(ints: &C) -> <C as Collection<i32>>::Sibling<f32>
   |                                     ------------------------------------ expected `<C as Collection<i32>>::Sibling<f32>` because of return type
...
LL |     res
   |     ^^^ expected Collection::Sibling, found CollectionFamily::Member
   |
   = note: expected associated type `<C as Collection<i32>>::Sibling<f32>`
              found associated type `<<C as Collection<i32>>::Family as CollectionFamily>::Member<f32>`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
